app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  html,
  body {
    overflow-y: scroll;
    overflow-x: hidden;
    height: 100%;
    margin: 0;
    scroll-behavior: smooth;
  }
}
@layer components {
  .animated-position {
    @apply transition-all duration-500;
  }
}
@layer utilities {
  #whitestripe {
    @apply blur-lg h-1 relative duration-1000 transition-all rounded-full  my-24 py-2 w-1/2 before:absolute before:inset-0 before:bg-gradient-radial-1and2 before:from-black  before:dark:from-white before:via-transparent before:to-transparent before:content-[""] before:rounded-xl after:absolute after:inset-0 after:top-0 after:left-1/2 after:transform after:-translate-x-1/2 after:-translate-y-1/4 after:bg-gradient-radial-1and2 after:dark:from-[#ffffff] after:from-black after:via-transparent after:to-transparent after:content-[""] after:rounded-full group-hover:scale-x-300 group-hover:opacity-40 group-hover:blur-xl motion-reduce:transform-none;
  }
  .text-balance {
    text-wrap: balance;
  }
  /*
  .no-scrollbar {
    overflow: auto;  Allow scrolling 
}
    */
  .smooth-scroll {
    transition: scroll-top 0.1s ease-in-out;
  }
  .no-scrollbar::-webkit-scrollbar {
    display: none; /* Hide scrollbar */
  }

  .markdown {
    line-height: 1.6;

    white-space: pre-wrap;
  }

  .markdown pre {
    background-color: #f5f5f5;
    padding: 1em;
    border-radius: 5px;

    /* Ensures proper indentation */
  }

  .markdown code {
    background-color: #f5f5f5;
    padding: 0.2em 0.4em;
    border-radius: 3px;
  }

  .markdown blockquote {
    margin-left: 1.5em;
    padding-left: 1em;
    border-left: 4px solid #ccc;
  }

  .markdown ul,
  .markdown ol {
    margin-left: 1.5em;
  }
  .markdown li {
    list-style-type: none;
  }
}

